--- a/flask-celery/Dockerfile
+++ b/flask-celery/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM python:2
 
 RUN apt-get update && apt-get install -y
 
@@ -7,9 +7,8 @@ COPY . flask-celery
 WORKDIR flask-celery
 
 RUN curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py"
-RUN python get-pip.py pip==19.3.1
+RUN python get-pip.py pip==20.0.2
 
 RUN pip install -r requirements.txt
-RUN chmod +x entrypoint.sh
 EXPOSE 5000
-ENTRYPOINT ["/flask-celery/entrypoint.sh"]    
+CMD python app.py
